RESOLVED FIXED79084
[GTK] REGRESSION: r108278 broke some tests that expect focus
https://bugs.webkit.org/show_bug.cgi?id=79084
Summary [GTK] REGRESSION: r108278 broke some tests that expect focus
Martin Robinson
Reported 2012-02-21 00:04:54 PST
http://trac.webkit.org/changeset/108278 removed an explicit gtk_widget_grab_focus from WebCore. This broke the following layout tests: fast/images/imagemap-focus-ring-zoom-style.html fast/forms/number/input-number-events.html fast/events/tabindex-focus-chain.html fast/events/tab-focus-hidden.html fast/events/tab-focus-anchor.html fast/events/media-element-focus-tab.html fast/events/keypress-insert-tab.html fast/images/imagemap-focus-ring-zoom-style.html editing/pasteboard/copy-element-with-conflicting-background-color-from-rule.html
Attachments
Patch (5.30 KB, patch)
2012-03-04 20:12 PST, Martin Robinson
no flags
Martin Robinson
Comment 1 2012-03-04 20:12:08 PST
Martin Robinson
Comment 2 2012-03-05 00:29:07 PST
Note You need to log in before you can comment on or make changes to this bug.