[GTK] REGRESSION: r108278 broke some tests that expect focus https://bugs.webkit.org/show_bug.cgi?id=79084

Reviewed by Philippe Normand.

Source/WebKit/gtk:

Grab focus before running the test. This ensures that if the
WebView lost focus, it has it before sending events.

* tests/testcopyandpaste.c:
(test_copy_and_paste): Grab focus.

Tools:

Grab focus when dumping test results and also when sending
events. During the course of testing, the WebView may lose
focus and this seems to snap it back when tests demand it.

* DumpRenderTree/gtk/DumpRenderTree.cpp:
(dump): Grab focus.
* DumpRenderTree/gtk/EventSender.cpp:
(dispatchEvent): Ditto.

LayoutTests:

* platform/gtk/Skipped: Unskip passing tests.

Canonical link: https://commits.webkit.org/97380@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109719 268f45cc-cd09-0410-ab3c-d52691b4dbfc